@@ -11,7 +11,6 @@ import com.robertx22.mine_and_slash.mmorpg.registers.common.ConfigRegister;
 import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
 import com.robertx22.mine_and_slash.uncommon.localization.Chats;
 import com.robertx22.mine_and_slash.vanilla_mc.packets.OnLoginClientPacket;
-import net.fabricmc.fabric.api.container.ContainerProviderRegistry;
 import net.fabricmc.fabric.api.event.lifecycle.v1.ServerEntityEvents;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.player.PlayerEntity;
@@ -60,8 +59,6 @@ public class OnLogin implements ServerEntityEvents.Load {
                 player.sendMessage(
                     new LiteralText("Error, player has no capability!" + Ref.MOD_NAME + " mod is broken!"), false);
             }
-
-            ContainerProviderRegistry.INSTANCE.openContainer(ModRegistry.CONTAINERS.HOTBAR_SETUP, player, buf -> buf.writeInt(5));
 
         } catch (
             Exception e) {
