@@ -1,0 +1,6 @@
+package com.robertx22.mine_and_slash.gui.bases;
+
+public interface IContainerNamedScreen extends INamedScreen {
+
+    void openContainer();
+}
