@@ -1,6 +1,7 @@
 package com.robertx22.mine_and_slash.mmorpg.registers.common;
 
 import com.robertx22.mine_and_slash.mmorpg.Packets;
+import com.robertx22.mine_and_slash.vanilla_mc.packets.OpenSpellSetupContainerPacket;
 import com.robertx22.mine_and_slash.vanilla_mc.packets.RequestTilePacket;
 import com.robertx22.mine_and_slash.vanilla_mc.packets.SpendStatPointsPacket;
 import com.robertx22.mine_and_slash.vanilla_mc.packets.spells.CastSpellPacket;
@@ -16,6 +17,7 @@ public class PacketRegister {
         Packets.registerClientToServerPacket(new SpendStatPointsPacket());
         Packets.registerClientToServerPacket(new HotbarSetupPacket());
         Packets.registerClientToServerPacket(new CastSpellPacket());
+        Packets.registerClientToServerPacket(new OpenSpellSetupContainerPacket());
 
     }
 
